crates/service/tests/references/snapshots/features__references__block__block_ref_int_idx-2.snap
---
source: crates/service/tests/references/block.rs
expression: exclude_decl
---
[
  {
    "uri": "untitled:test",
    "range": {
      "start": {
        "line": 6,
        "character": 16
      },
      "end": {
        "line": 6,
        "character": 17
      }
    }
  },
  {
    "uri": "untitled:test",
    "range": {
      "start": {
        "line": 5,
        "character": 18
      },
      "end": {
        "line": 5,
        "character": 19
      }
    }
  }
]
