crates/service/tests/references/snapshots/features__references__block__block_relation-3.snap
---
source: crates/service/tests/references/block.rs
expression: ref_0
---
[
  {
    "uri": "untitled:test",
    "range": {
      "start": {
        "line": 4,
        "character": 13
      },
      "end": {
        "line": 4,
        "character": 15
      }
    }
  },
  {
    "uri": "untitled:test",
    "range": {
      "start": {
        "line": 5,
        "character": 17
      },
      "end": {
        "line": 5,
        "character": 18
      }
    }
  }
]
