crates/service/tests/references/snapshots/features__references__block__block_relation-4.snap
---
source: crates/service/tests/references/block.rs
expression: ref_1
---
[
  {
    "uri": "untitled:test",
    "range": {
      "start": {
        "line": 3,
        "character": 11
      },
      "end": {
        "line": 3,
        "character": 13
      }
    }
  },
  {
    "uri": "untitled:test",
    "range": {
      "start": {
        "line": 5,
        "character": 19
      },
      "end": {
        "line": 5,
        "character": 20
      }
    }
  }
]
