crates/service/tests/references/snapshots/features__references__block__catch-2.snap
---
source: crates/service/tests/references/block.rs
expression: ref_1
---
[
  {
    "uri": "untitled:test",
    "range": {
      "start": {
        "line": 3,
        "character": 10
      },
      "end": {
        "line": 3,
        "character": 12
      }
    }
  },
  {
    "uri": "untitled:test",
    "range": {
      "start": {
        "line": 4,
        "character": 26
      },
      "end": {
        "line": 4,
        "character": 27
      }
    }
  },
  {
    "uri": "untitled:test",
    "range": {
      "start": {
        "line": 4,
        "character": 76
      },
      "end": {
        "line": 4,
        "character": 78
      }
    }
  },
  {
    "uri": "untitled:test",
    "range": {
      "start": {
        "line": 4,
        "character": 43
      },
      "end": {
        "line": 4,
        "character": 44
      }
    }
  },
  {
    "uri": "untitled:test",
    "range": {
      "start": {
        "line": 4,
        "character": 57
      },
      "end": {
        "line": 4,
        "character": 59
      }
    }
  }
]
